# NationOfLastLand-Core

./: .gitignore  Cargo.toml  Makefile  README.md  RustVsGo.md  TODO.md  ecs.md  event-driven.md  example.yml  obsolete.md
core/: Cargo.toml
core/examples/: check_data_v2.rs  check_vehicles.rs  ex_1.rs  ex_attach.rs  ex_attach_floor.rs  ex_attack_vehicles.rs  ex_load.rs  ex_unit_inventory.rs  test_damaged_unit_floor.rs  test_faction_targeting.rs  test_waste_attacks_car.rs
core/src/: base_utils.rs  core.rs  defines.rs  exporter.rs  internal_data.rs  lib.rs  random_generator.rs  spawner.rs  world_utils.rs
core/src/descriptions/: active_slots.rs  alerts.rs  bases.rs  damage_types.rs  descriptions.rs  floors.rs  interactions.rs  items.rs  mod.rs  slot.rs  slots_tags.rs  slots_types.rs  units.rs  vehicles.rs
core/src/modules/: exporter.rs  mod.rs  setup.rs  state.rs  world_state.rs
core/src/modules/components/: active_slots.rs  attached_floors.rs  attached_items.rs  base_type.rs  clean_power.rs  damage_type.rs  descriptions.rs  entity_type.rs  floors.rs  force.rs  fraction.rs  guid.rs  health.rs  inventory.rs  item_slot_type.rs  max_speed.rs  mod.rs  owner.rs  pos.rs  reputation.rs  resistance.rs  target.rs  target_id.rs  toxic_power.rs  unit_name.rs  unit_type.rs  weapon.rs  weapon_mode.rs
core/src/modules/entities/: mod.rs  waste.rs
core/src/modules/markers/: add_floor_event.rs  alert.rs  attach_floor_event.rs  attack_event.rs  base.rs  floor.rs  is_dead.rs  is_moving.rs  is_target_near.rs  is_waiting_target.rs  item.rs  mod.rs  stopped.rs  trash.rs  unit.rs  vehicle.rs  waste.rs
core/src/modules/systems/: ai_unit.rs  (+7 more)
core/src/spawner/: alert.rs  base.rs  floor.rs  item.rs  mod.rs  unit.rs  vehicle.rs
example-wasm/: Cargo.toml  README.md  index.html
example-wasm/src/: lib.rs
(+40 files in other folders)
