[workspace]
resolver = "3"
members = [
    "core",
    "example-wasm"
]

[workspace.dependencies]
hecs = { version = "0.10.5", features = ["row-serialize"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
