[package]
name = "nation-of-last-land-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
hecs.workspace = true
rand = { workspace = true, features = ["getrandom"] }
serde.workspace = true
serde_json.workspace = true
