[package]
name = "example-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"  # или "s" — минимальный размер
strip = true     # удаляет отладочную информацию (требуется nightly)
lto = true       # whole-program LTO
codegen-units = 1
panic = "abort"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "EventTarget",
    "Event",
] }
console_error_panic_hook = "0.1"
nation-of-last-land-core = { path = "../core" }
hecs = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
